Applicata proprietà position:fixed e z-index: 99 all'header. Aggiunto margin top e bottom al main

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body{
 .container{
     width: 70%;
     margin: 0 auto;
+    position: relative;
 }
 
 .row{
@@ -39,8 +40,14 @@ body{
 header{
     background-color: rgb(247, 107, 52);
     width: 100%;
-    height: 50px
+    height: 50px;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 99;
 }
+
 header .row{
     padding-top: 10px; 
     justify-content: center;
@@ -79,10 +86,14 @@ header .row{
 
 
 /* INIZIO MAIN */
+
+main .container{
+    margin-top:100px;
+    margin-bottom: 50px;
+}
 .col-card{
     width: calc(100%/3 - 20px);
     margin: 10px;
-    /* height: 600px; */
     border: 1px dashed rgb(0, 0, 0);
 }
 
